--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -6,7 +6,7 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
-    "mui-datatables": "^2.0.0-beta-52",
+    "material-table": "^1.13.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
